added cv from smart-fancy-latex-cv

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-20seconds_resume/resume.out
-20seconds_resume/resume.aux
-20seconds_resume/resume.fdb_latexmk
-20seconds_resume/resume.fls
-20seconds_resume/resume.log
+*/*.out
+*/*.aux
+*/*.fdb_latexmk
+*/*.fls
+*/*.log
+*/*.bbl
+*/*.blg
+*/*.bcf
+*/*.pdf
+*/*.run.xml
+*/*.gz
